--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>7 Jun. 2012</b>
+- "Armed for Battle" now allows to play card from draw deck, only if you're at the Battleground.
+
 <b>6 Jun. 2012</b>
 - "Final Account" now requires to exert a GANDALF Wizard to play it.
 - "Perspective" now correctly adds threats.
