- "Ulaire Nelya, Assailing Minion" has site number 2 now.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>13 Jun. 2012</b>
+- "Ulaire Nelya, Assailing Minion" has site number 2 now.
+
 <b>7 Jun. 2012</b>
 - "Armed for Battle" now allows to play card from draw deck, only if you're at the Battleground.
 
