- War of the Ring sealed no longer allows to cancel ring-bearer skirmish.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>19 Jun. 2012</b>
+- War of the Ring sealed no longer allows to cancel ring-bearer skirmish.
+
 <b>13 Jun. 2012</b>
 - "Ulaire Nelya, Assailing Minion" has site number 2 now.
 
