--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,8 @@
 <pre style="font-size:80%">
+<b>27 Jun. 2012</b>
+- "Great Cost" now makes the FP player to put the card from hand on top of the deck and also the condition discards
+itself.
+
 <b>19 Jun. 2012</b>
 - War of the Ring sealed no longer allows to cancel ring-bearer skirmish.
 
