- "Last Days" allows to play only one minion now, if a minion is killed (counts as both killed and discarded).

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>29 Jun. 2012</b>
+- "Last Days" allows to play only one minion now, if a minion is killed (counts as both killed and discarded).
+
 <b>28 Jun. 2012</b>
 - "Argument Ready to Hand" no longer discards companions.
 
