--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>2 Jul. 2012</b>
+- "Unheard of" now does not allow to wound minions that are assigned to a skirmish.
+
 <b>29 Jun. 2012</b>
 - "Last Days" allows to play only one minion now, if a minion is killed (counts as both killed and discarded).
 
