--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/tournamentResults.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/tournamentResults.html
@@ -2,8 +2,14 @@
     $(document).ready(
             function () {
                 var ui = new TournamentResultsUI("/gemp-lotr-server");
+
+                $(".loadFinishedTournaments").button().click(
+                        function() {
+                            ui.loadHistoryTournaments();
+                        });
             });
 
 </script>
 All times are GMT based.
+<div class="loadFinishedTournaments">Load finished tournaments</div>
 <div id="tournamentResults"></div>
