--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>3 Jul. 2012</b>
+- "Gorgoroth Officer" no longer allows to not discard cards from hand to play the minion.
+
 <b>2 Jul. 2012</b>
 - "Unheard of" now does not allow to wound minions that are assigned to a skirmish.
 
