- "Harrowdale" now works only until the regroup phase, but both if you moved to and moved out of "Harrowdale".

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>6 Jul. 2012</b>
+- "Harrowdale" now works only until the regroup phase, but both if you moved to and moved out of "Harrowdale".
+
 <b>3 Jul. 2012</b>
 - "Gorgoroth Officer" no longer allows to not discard cards from hand to play the minion.
 
