--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>9 Jul. 2012</b>
+- "Anarion, Lord of Anorien" effect now remembers the list of minions it affects upon use, as well as the penalty value.
+
 <b>6 Jul. 2012</b>
 - "Harrowdale" now works only until the regroup phase, but both if you moved to and moved out of "Harrowdale".
 
