--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,8 @@
 <pre style="font-size:80%">
 <b>9 Jul. 2012</b>
 - "Anarion, Lord of Anorien" effect now remembers the list of minions it affects upon use, as well as the penalty value.
+- "Orc Line-breaker" now should work correctly, as skirmishes are finished (characters removed from them) after the
+end-of-skirmish happens.
 
 <b>6 Jul. 2012</b>
 - "Harrowdale" now works only until the regroup phase, but both if you moved to and moved out of "Harrowdale".
