- Added player statistics (visible only to the user himself). displaying the number of wins/losses for each format and deck played, split into casual and competitive groups. - Added server statistics. displaying the number of active players, games played and split of casual games by format for selected period.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,12 @@
 <pre style="font-size:80%">
+<b>11 Jul. 2012</b>
+- Added player statistics (visible only to the user himself). displaying the number of wins/losses for each format and
+deck played, split into casual and competitive groups.
+
+<b>10 Jul. 2012</b>
+- Added server statistics. displaying the number of active players, games played and split of casual games by format
+for selected period.
+
 <b>9 Jul. 2012</b>
 - "Anarion, Lord of Anorien" effect now remembers the list of minions it affects upon use, as well as the penalty value.
 - "Orc Line-breaker" now should work correctly, as skirmishes are finished (characters removed from them) after the
