--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -2,6 +2,7 @@
 <b>11 Jul. 2012</b>
 - Added player statistics (visible only to the user himself). displaying the number of wins/losses for each format and
 deck played, split into casual and competitive groups.
+- "Dunlending Patriarch" playing discount now is optional.
 
 <b>10 Jul. 2012</b>
 - Added server statistics. displaying the number of active players, games played and split of casual games by format
