--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>25 Jul. 2012</b>
+- "Hobbit Appetite" allows to heal Hobbit companions only.
+
 <b>11 Jul. 2012</b>
 - Added player statistics (visible only to the user himself). displaying the number of wins/losses for each format and
 deck played, split into casual and competitive groups.
