- "Vengeful Wild Man" now allows to add threats only if you can spot another [MEN] Man.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,5 +1,6 @@
 <pre style="font-size:80%">
 <b>25 Jul. 2012</b>
+- "Vengeful Wild Man" now allows to add threats only if you can spot another [MEN] Man.
 - "Hobbit Appetite" allows to heal Hobbit companions only.
 
 <b>11 Jul. 2012</b>
