- "Damrod, Ranger of Ithilien" can now exhaust Man only.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>26 Jul. 2012</b>
+- "Damrod, Ranger of Ithilien" can now exhaust Man only.
+
 <b>25 Jul. 2012</b>
 - "Vengeful Wild Man" now allows to add threats only if you can spot another [MEN] Man.
 - "Hobbit Appetite" allows to heal Hobbit companions only.
