- "Gorbag's Sword" now gives the option to put the possession on top of the deck to the owner of the card.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>1 Aug. 2012</b>
+- "Gorbag's Sword" now gives the option to put the possession on top of the deck to the owner of the card.
+
 <b>26 Jul. 2012</b>
 - "Damrod, Ranger of Ithilien" can now exhaust Man only.
 
