--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>9 Aug. 2012</b>
+- "That Is No Orc Horn" is now allowing to heal a companion and liberate a site, rather than one of the effects.
+
 <b>1 Aug. 2012</b>
 - "Gorbag's Sword" now gives the option to put the possession on top of the deck to the owner of the card.
 
