- "Radagast Deceived" no longer has a base Damage+1.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -3,6 +3,7 @@
 - "That Is No Orc Horn" is now allowing to heal a companion and liberate a site, rather than one of the effects.
 - "Aragorn's Bow, Ranger's Longbow" now correctly can wound minions that have their strength based off number of threats.
 - Format X-list and R-list now enforces also Sites, Ring and Ring-bearer.
+- "Radagast Deceived" no longer has a base Damage+1.
 
 <b>1 Aug. 2012</b>
 - "Gorbag's Sword" now gives the option to put the possession on top of the deck to the owner of the card.
