- "Watch and Wait" can't be attached to Ring-bearer anymore.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>11 Aug. 2012</b>
+- "Watch and Wait" can't be attached to Ring-bearer anymore.
+
 <b>9 Aug. 2012</b>
 - "That Is No Orc Horn" is now allowing to heal a companion and liberate a site, rather than one of the effects.
 - "Aragorn's Bow, Ranger's Longbow" now correctly can wound minions that have their strength based off number of threats.
