- Added support for the Pre-shadow Multipath format.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>28 Aug. 2012</b>
+- Added support for the Pre-shadow Multipath format.
+
 <b>11 Aug. 2012</b>
 - "Watch and Wait" can't be attached to Ring-bearer anymore.
 
