- "Chasing Uruk" now allows to take control of a site, only if "Chasing Uruk" itself wins the skirmish, not if any minion wins the skirmish.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,8 @@
 <pre style="font-size:80%">
+<b>31 Aug. 2012</b>
+- "Chasing Uruk" now allows to take control of a site, only if "Chasing Uruk" itself wins the skirmish, not if any minion
+wins the skirmish.
+
 <b>28 Aug. 2012</b>
 - Added support for the Pre-shadow Multipath format.
 
