--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>1 Sep. 2012</b>
+- "Long Prepared" now correctly allows to exert a GONDOR Man and then wounds a roaming minion in that man's skirmish.
+
 <b>31 Aug. 2012</b>
 - "Chasing Uruk" now allows to take control of a site, only if "Chasing Uruk" itself wins the skirmish, not if any minion
 wins the skirmish.
