- "Slow-kindled Courage" and other FP conditions that give Assignment actions to minions, now actually do that.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>2 Sep. 2012</b>
+- "Slow-kindled Courage" and other FP conditions that give Assignment actions to minions, now actually do that.
+
 <b>1 Sep. 2012</b>
 - "Long Prepared" now correctly allows to exert a GONDOR Man and then wounds a roaming minion in that man's skirmish.
 
