- "Balin Avenged" now correctly allows to play the ORC Orcs by removing the card from discard, as an additional cost.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>10 Sep. 2012</b>
+- "Balin Avenged" now correctly allows to play the ORC Orcs by removing the card from discard, as an additional cost.
+
 <b>2 Sep. 2012</b>
 - "Slow-kindled Courage" and other FP conditions that give Assignment actions to minions, now actually do that.
 
