--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>12 Sep. 2012</b>
+- "Morgul Regiment" and similar cards now trigger only during fierce assignment, only if the minion has Fierce.
+
 <b>10 Sep. 2012</b>
 - "Balin Avenged" now correctly allows to play the ORC Orcs by removing the card from discard, as an additional cost.
 
