- "Rallying Call" should now correctly prevent removal of threats by FP cards.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>20 Sep. 2012</b>
+- "Rallying Call" should now correctly prevent removal of threats by FP cards.
+
 <b>12 Sep. 2012</b>
 - "Morgul Regiment" and similar cards now trigger only during fierce assignment, only if the minion has Fierce.
 
