--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -3,6 +3,7 @@
 - "Rallying Call" should now correctly prevent removal of threats by FP cards.
 - All of the cost-to-effect actions, when cost was prevented, should now stop the "effect" part, i.e. Corsair Marauder
 if the discarding of possession was prevented, will not reinforce token.
+- Added the missing Skirmish action to Nelya, Fell Rider.
 
 <b>12 Sep. 2012</b>
 - "Morgul Regiment" and similar cards now trigger only during fierce assignment, only if the minion has Fierce.
