--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>25 Sep. 2012</b>
 - "Elven Armaments" now prevents only the FP player from using the Archery special abilities.
+- "Whatever Means" should now work correctly in cases, when burdens cannot be removed.
 
 <b>20 Sep. 2012</b>
 - "Rallying Call" should now correctly prevent removal of threats by FP cards.
