--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -2,6 +2,7 @@
 <b>25 Sep. 2012</b>
 - "Elven Armaments" now prevents only the FP player from using the Archery special abilities.
 - "Whatever Means" should now work correctly in cases, when burdens cannot be removed.
+- "Sword of Minas Morgul" should now correctly discard the possession from character in the skirmish.
 
 <b>20 Sep. 2012</b>
 - "Rallying Call" should now correctly prevent removal of threats by FP cards.
