- "Rallying Call" should no longer cause the game to crash, if an FP character dies and there were threats.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -3,6 +3,7 @@
 - "Elven Armaments" now prevents only the FP player from using the Archery special abilities.
 - "Whatever Means" should now work correctly in cases, when burdens cannot be removed.
 - "Sword of Minas Morgul" should now correctly discard the possession from character in the skirmish.
+- "Rallying Call" should no longer cause the game to crash, if an FP character dies and there were threats.
 
 <b>20 Sep. 2012</b>
 - "Rallying Call" should now correctly prevent removal of threats by FP cards.
