--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>26 Sep. 2012</b>
+- "The One Ring, The Great Ring" now correctly grants the Ring-bound keyword to its bearer.
+
 <b>25 Sep. 2012</b>
 - "Elven Armaments" now prevents only the FP player from using the Archery special abilities.
 - "Whatever Means" should now work correctly in cases, when burdens cannot be removed.
