--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>1 Oct. 2012</b>
+- "Raider Halberd" added to X-list for "Pre-Shadows Multipath" format.
+
 <b>26 Sep. 2012</b>
 - "The One Ring, The Great Ring" now correctly grants the Ring-bound keyword to its bearer.
 
