Added PayPal account name.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/contribute.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/contribute.html
@@ -5,7 +5,8 @@
         report the problems.
     </li>
     <li>Donations? Well I do spend a lot of time working on it, but I love (almost) every moment of doing it. I'm
-        hosting the server on Amazon so I might use some financial support.
+        hosting the server on Amazon so I might use some financial support. If you wish you can send donations to my
+        PayPal account - marcins78@gmail.com
     </li>
 </ul>
 
