- "Ugluk's Sword, Weapon of Command" - bearer cannot take wounds only if you control 2 or more sites now.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>2 Oct. 2012</b>
+- "Ugluk's Sword, Weapon of Command" - bearer cannot take wounds only if you control 2 or more sites now.
+
 <b>1 Oct. 2012</b>
 - "Raider Halberd" added to X-list for "Pre-Shadows Multipath" format.
 
