- "Called Away" cannot be played now if burdens cannot be removed.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>5 Oct. 2012</b>
+- "Called Away" cannot be played now if burdens cannot be removed.
+
 <b>2 Oct. 2012</b>
 - "Ugluk's Sword, Weapon of Command" - bearer cannot take wounds only if you control 2 or more sites now.
 
