- "Down to the Last Child" now triggers on companion/ally losing skirmish, not Uruk-hai winning, so if companion loses skirmish to 2 Uruk-hai, it will only add one token.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,8 @@
 <pre style="font-size:80%">
+<b>16 Oct. 2012</b>
+- "Down to the Last Child" now triggers on companion/ally losing skirmish, not Uruk-hai winning, so if companion loses
+skirmish to 2 Uruk-hai, it will only add one token.
+
 <b>5 Oct. 2012</b>
 - "Called Away" cannot be played now if burdens cannot be removed.
 
