- "Harrowdale" might be working fine this time around.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>23 Oct. 2012</b>
+- "Harrowdale" might be working fine this time around.
+
 <b>16 Oct. 2012</b>
 - "Down to the Last Child" now triggers on companion/ally losing skirmish, not Uruk-hai winning, so if companion loses
 skirmish to 2 Uruk-hai, it will only add one token.
