--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -5,6 +5,7 @@
 all optional effects have to be used via cards). If you want to use Muster, just click the card (right-click to be sure
 what effect you're using). Then you choose which cards you want to discard, up to the number of Muster cards you have.
 All cards are discarded and then you draw an equal number of cards.
+- "Arwen's Fate" now can't be played if you don't control exertable Aragorn or Arwen.
 
 <b>16 Oct. 2012</b>
 - "Down to the Last Child" now triggers on companion/ally losing skirmish, not Uruk-hai winning, so if companion loses
