- "Bilbo, Bearer of Things Burgled" can now only play either non-events or Regroup events (not Skirmish events and thee like).

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -6,6 +6,7 @@ all optional effects have to be used via cards). If you want to use Muster, just
 what effect you're using). Then you choose which cards you want to discard, up to the number of Muster cards you have.
 All cards are discarded and then you draw an equal number of cards.
 - "Arwen's Fate" now can't be played if you don't control exertable Aragorn or Arwen.
+- "Bilbo, Bearer of Things Burgled" can now only play either non-events or Regroup events (not Skirmish events and thee like).
 
 <b>16 Oct. 2012</b>
 - "Down to the Last Child" now triggers on companion/ally losing skirmish, not Uruk-hai winning, so if companion loses
