--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -7,6 +7,8 @@ what effect you're using). Then you choose which cards you want to discard, up t
 All cards are discarded and then you draw an equal number of cards.
 - "Arwen's Fate" now can't be played if you don't control exertable Aragorn or Arwen.
 - "Bilbo, Bearer of Things Burgled" can now only play either non-events or Regroup events (not Skirmish events and thee like).
+- Changed all the effects that modify Move Limit to always act until end of turn once a condition is met (first time
+in that turn).
 
 <b>16 Oct. 2012</b>
 - "Down to the Last Child" now triggers on companion/ally losing skirmish, not Uruk-hai winning, so if companion loses
