--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>24 Oct. 2012</b>
+- Added replay speed buttons.
+
 <b>23 Oct. 2012</b>
 - "Harrowdale" might be working fine this time around.
 - Changed how Muster works now. At the start of the regroup phase, one of your muster cards will light up (unfortunately
