--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,8 @@
 <pre style="font-size:80%">
 <b>24 Oct. 2012</b>
 - Added replay speed buttons.
+- If two (or more) required before actions happen, FP player has a choice which one to play first. If that action
+prevents the effect, other required actions that depend on that effect will no longer be playable.
 
 <b>23 Oct. 2012</b>
 - "Harrowdale" might be working fine this time around.
