--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -395,7 +395,8 @@ minions to play.
 - "You're a Liar and a Thief" now has a corrected name.
 
 <b>3 Feb. 2012</b>
-- Any version of Sam that can become the ring-bearer if Frodo dies can only become the ring-bearer if Frodo was the ring bearer when he was killed.
+- Any version of Sam that can become the ring-bearer if Frodo dies can only become the ring-bearer if Frodo was the ring
+bearer when he was killed.
 
 <b>2 Feb. 2012</b>
 - "Iron Fist of the Orc" now can be activated in Regroup phase, rather than in Shadow phase.
