--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -3,6 +3,7 @@
 - Added replay speed buttons.
 - If two (or more) required before actions happen, FP player has a choice which one to play first. If that action
 prevents the effect, other required actions that depend on that effect will no longer be playable.
+- If a cost of an action (effect or play card) is prevented, the action does not have any effect.
 
 <b>23 Oct. 2012</b>
 - "Harrowdale" might be working fine this time around.
