--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>7 Nov. 2012</b>
+- "King's Board" now correctly allows to exert the named characters for the effect, if you do not control Eomer.
+
 <b>24 Oct. 2012</b>
 - Added replay speed buttons.
 - If two (or more) required before actions happen, FP player has a choice which one to play first. If that action
