--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,8 @@
 <pre style="font-size:80%">
 <b>7 Nov. 2012</b>
 - "King's Board" now correctly allows to exert the named characters for the effect, if you do not control Eomer.
+- Another change to Muster. Now to USE Muster, you have to click the card shadow showing above the panel used to drive
+game flow (where you press "Pass" and accept your choices).
 
 <b>24 Oct. 2012</b>
 - Added replay speed buttons.
