--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -3,6 +3,8 @@
 - "King's Board" now correctly allows to exert the named characters for the effect, if you do not control Eomer.
 - Another change to Muster. Now to USE Muster, you have to click the card shadow showing above the panel used to drive
 game flow (where you press "Pass" and accept your choices).
+- "Return to Its Master" now also ends current skirmish, to allow assigning the Nazgul and Ring-bearer that were
+skirmishing at the time when it is played.
 
 <b>24 Oct. 2012</b>
 - Added replay speed buttons.
