--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>9 Nov. 2012</b>
+- "Return to Its Master" now creates an additional Skirmish Phase.
+
 <b>7 Nov. 2012</b>
 - "King's Board" now correctly allows to exert the named characters for the effect, if you do not control Eomer.
 - Another change to Muster. Now to USE Muster, you have to click the card shadow showing above the panel used to drive
