--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>18 Nov. 2012</b>
+- "Deceit" now allows to prevent only discarding your cards.
+
 <b>9 Nov. 2012</b>
 - "Return to Its Master" now creates an additional Skirmish Phase.
 
