--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>21 Nov. 2012</b>
+- "Librarian, Keeper of Ancient Texts" should no longer cancel current game when used its Regroup ability.
+
 <b>18 Nov. 2012</b>
 - "Deceit" now allows to prevent only discarding your cards.
 
