--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -4,6 +4,7 @@
 - Deck statistics no longer include cancelled games.
 - All "add burden" actions now have a performing player and "Spirit of the White Tree" should no longer be discarded,
 if FP players adds a burden with an effect coming from Shadow card.
+- "Hall of Our Fathers" should now correctly move your cards from hand onto the condition.
 
 <b>18 Nov. 2012</b>
 - "Deceit" now allows to prevent only discarding your cards.
