- "Blood of Numenor" now exhausts only Orc minions.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>23 Nov. 2012</b>
+- "Blood of Numenor" now exhausts only Orc minions.
+
 <b>21 Nov. 2012</b>
 - "Librarian, Keeper of Ancient Texts" should no longer cancel current game when used its Regroup ability.
 - Deck statistics no longer include cancelled games.
