- "Orc Insurgent" now allows a choice of number of FP cultures over 2 you wish to spot.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>12 Dec. 2012</b>
 - "Strength of Spirit" no longer cancels an effect if the exertion was a cost.
+- "Orc Insurgent" now allows a choice of number of FP cultures over 2 you wish to spot. 
 
 <b>27 Nov. 2012</b>
 - "Cliffs of Emyn Muil" should have a default value of 2 for removing burdens.
