- Both "Forces of Mordor" and "Uruk Spy" now give a choice of number of minions to spot, therefore allowing to spot less than are in play.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,8 @@
 <pre style="font-size:80%">
+<b>15 Dec. 2012</b>
+- Both "Forces of Mordor" and "Uruk Spy" now give a choice of number of minions to spot, therefore allowing to spot less
+than are in play.
+
 <b>14 Dec. 2012</b>
 - Effects that play attachments should now correctly check available twilight (including the cost of the effect)
 before being allowed to be played.
