- "Dunlending Warrior" cannot be activated now, if you can't spot a follower.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>21 Dec. 2012</b>
+- "Dunlending Warrior" cannot be activated now, if you can't spot a follower.
+
 <b>19 Dec. 2012</b>
 - Merchant logic was switched to one based on stock. If it has no specific card, it won't be able to sell it, until it
 acquires a copy from another player. Once stock reaches specified number, it will stop buying the card.
