- Merchant now sells all the cards, but the out-of-stock cards are substantially more expensive to buy.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>23 Dec. 2012</b>
+- Merchant now sells all the cards, but the out-of-stock cards are substantially more expensive to buy.
+
 <b>21 Dec. 2012</b>
 - "Dunlending Warrior" cannot be activated now, if you can't spot a follower.
 
