Added extra prizes information.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/css/gemp-001/hall.css
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/css/gemp-001/hall.css
@@ -33,6 +33,12 @@ body {
     cursor: pointer;
 }
 
+.prizeHint {
+    display: inline;
+    color: #6f6fff;
+    cursor: pointer;
+}
+
 .clickableFormat {
     cursor: pointer;
     color: #6f6fff;
