Adding JSP headers to included HTMLs.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,3 +1,9 @@
+<%@ page contentType="text/html; charset=UTF-8"%>
+<%
+response.setHeader("Cache-Control","no-cache");
+response.setHeader("Pragma","no-cache");
+response.setDateHeader ("Expires", -1);
+%>
 <pre style="font-size:80%">
 <b>03 Jan. 2013</b>
 - "Legolas, Elven Comrade" now should automatically allow to choose a minion skirmishing an unbound companion.
