--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/formatRules.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/formatRules.html
@@ -1,3 +1,9 @@
+<%@ page contentType="text/html; charset=UTF-8"%>
+<%
+response.setHeader("Cache-Control","no-cache");
+response.setHeader("Pragma","no-cache");
+response.setDateHeader ("Expires", -1);
+%>
 <b>Fellowship block</b>
 <ul>
     <li>cards from sets 01-03 are legal,</li>
