--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/leagueRules.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/leagueRules.html
@@ -1,3 +1,9 @@
+<%@ page contentType="text/html; charset=UTF-8"%>
+<%
+response.setHeader("Cache-Control","no-cache");
+response.setHeader("Pragma","no-cache");
+response.setDateHeader ("Expires", -1);
+%>
 <h1>League rules</h1>
 <p>Points marked with (SEALED) refer to sealed leagues only.</p>
 
