--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/registrationForm.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/registrationForm.html
@@ -1,3 +1,9 @@
+<%@ page contentType="text/html; charset=UTF-8"%>
+<%
+response.setHeader("Cache-Control","no-cache");
+response.setHeader("Pragma","no-cache");
+response.setDateHeader ("Expires", -1);
+%>
 Login: <input id='login' type='text'><br/>
 Password: <input id='password' type='password'><br/>
 Password repeated: <input id='password2' type='password'><br/>
