--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/tournamentResults.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/tournamentResults.html
@@ -1,3 +1,9 @@
+<%@ page contentType="text/html; charset=UTF-8"%>
+<%
+response.setHeader("Cache-Control","no-cache");
+response.setHeader("Pragma","no-cache");
+response.setDateHeader ("Expires", -1);
+%>
 <script type="text/javascript">
     $(document).ready(
             function () {
