- If FP player uses Muster, shadow player is now also able to use it.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -5,6 +5,9 @@ response.setHeader("Pragma","no-cache");
 response.setDateHeader ("Expires", -1);
 %>
 <pre style="font-size:80%">
+<b>04 Jan. 2013</b>
+- If FP player uses Muster, shadow player is now also able to use it.
+
 <b>03 Jan. 2013</b>
 - "Legolas, Elven Comrade" now should automatically allow to choose a minion skirmishing an unbound companion.
 
