- If you have "No Business of Ours" in play, you can still reveal or look at FP player's hand.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -5,6 +5,9 @@ response.setHeader("Pragma","no-cache");
 response.setDateHeader ("Expires", -1);
 %>
 <pre style="font-size:80%">
+<b>05 Jan. 2013</b>
+- If you have "No Business of Ours" in play, you can still reveal or look at FP player's hand.
+
 <b>04 Jan. 2013</b>
 - If FP player uses Muster, shadow player is now also able to use it.
 - "Gnawing, Biting, Hacking, Burning" and similar cards should now allow to stack multiple minions if they are discarded
